<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    tools:context=".activity.MainActivity" >


    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="ivLogo,tvAuthor,tvPublished, ibMenu" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/author_logo_description"
            app:srcCompat="@drawable/netology_logo_short"
            android:padding="4dp"
            tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        app:layout_constraintStart_toEndOf="@+id/ivLogo"
        app:layout_constraintTop_toTopOf="@+id/ivLogo"
        android:textStyle="bold"
        android:layout_margin="4dp" />

    <TextView
        android:id="@+id/tvPublished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/published"
        app:layout_constraintBottom_toBottomOf="@+id/ivLogo"
        app:layout_constraintStart_toEndOf="@id/ivLogo"
        app:layout_constraintTop_toBottomOf="@id/tvAuthor"
        android:layout_margin="4dp"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/ibMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/menu_button_desc"
        android:src="@drawable/menu_dots"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"/>

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/content"
        app:layout_constraintTop_toBottomOf="@id/tvPublished"
        />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:layout_constraintTop_toBottomOf="@id/tvContent"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:constraint_referenced_ids="ibLike, tvLike, ibShare, tvShared, ibViewed, tvViewed"
        />

    <ImageButton
        android:id="@+id/ibLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/like_desc"
        android:src="@drawable/like_black"
        android:background="@android:color/transparent"
        android:layout_margin="4dp"
        app:layout_constraintTop_toBottomOf="@id/tvContent"/>

    <TextView
        android:id="@+id/tvLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/liked"
        app:layout_constraintTop_toTopOf="@+id/ibLike"
        app:layout_constraintBottom_toBottomOf="@+id/ibLike"
        app:layout_constraintStart_toEndOf="@id/ibLike"
        />

    <ImageButton
        android:id="@+id/ibShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/share_desc"
        android:src="@drawable/share"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@id/tvLike"
        app:layout_constraintBottom_toBottomOf="@id/tvLike"
        app:layout_constraintStart_toEndOf="@id/tvLike"
        android:layout_marginStart="16dp"
        />

    <TextView
        android:id="@+id/tvShared"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shared"
        app:layout_constraintTop_toTopOf="@id/ibShare"
        app:layout_constraintBottom_toBottomOf="@id/ibShare"
        app:layout_constraintStart_toEndOf="@id/ibShare" />

    <ImageButton
        android:id="@+id/ibViewed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/viewed_desc"
        android:src="@drawable/eye_see_show_svgrepo_com"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@id/ibShare"
        app:layout_constraintEnd_toStartOf="@id/tvViewed"
        app:layout_constraintBottom_toBottomOf="@id/ibShare"
        android:layout_margin="8dp"
        />

    <TextView
        android:id="@+id/tvViewed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvContent"
        android:layout_margin="10dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>
